--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
 	<title>Ajax Todo List</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<style type="text/css">
+
+	</style>
 </head>
 <body>
-	<div class="container">
-		
+	<div id="wrap">
+		<h1>Task List <span>0</span></h1>
+		<ul id="tasks"></ul>
+		<ul id="done"></ul>
+
+		<div id="new-task">
+			<input type="text" ><button>+</button>
+		</div>
 	</div>
+	<script src="assets/js/jquery.js"></script>
+	<script src="assets/js/script.js">
+	</script>
 </body>
 </html>
